--- a/index.html
+++ b/index.html
@@ -5,29 +5,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coblet</title>
+    <title>Good Forms (Coblet UI)</title>
     <script type="module" src="main.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <h1>Coblet: A basic metadata driven web forms library</h1>
-
+    <h1>Good Forms (Coblet UI)</h1>
+    A basic metadata driven web forms library.
 
     <div class="example">
         <div id="coblet">
-            TBD: INJECT VIEW HERE
+            <div class="centered">
+            (Form example will be injected here.)
+            </div>
         </div>
         <div style="text-align: center; margin: 1em;">
             <button onclick="init()">Initialize New Coblet</button>
         </div>
     </div>
 
-    TODOS:
-    <ul>
-        <li>a basic example</li>
-    </ul>
+    <p>
+        Project todos: 
+        <ul>
+            <li>a basic example</li>
+            <li>documentation</li>
+            <li>integration examples</li>
+        </ul>
+    </p>
 
     <h2>Why did I go this route? </h2>
 
@@ -47,14 +53,15 @@
     </p>
 
     <p>Customizations for look feel are intended to be handled using CSS to style the rendered output.
-        Also, the input types are intended to be customizable, and once you've gone to the trouble to create one, it can be
+        Also, the input types are intended to be customizable, and once you've gone to the trouble to create one, it can
+        be
         reused as part of the metadata language that powers it.
         That's the basic idea...at the moment, I'm fiddling a specific use-case which is driving development of this.
         If it gains traction, more to come!
     </p>
 
     <h2>What's up with the name?</h2>
-    
+
     Once upon a time there was a project with a name that might have sounded similar;
     despite being successful, it wasn't something that rhymes with wrangler-js (and thankfully so.)
     Whether this is actually any better. You decide...if/when there's something here to be tried out.
